# rust-in-action

./: Cargo.toml
ch1-cerelas/: Cargo.toml
ch1-cerelas/src/: main.rs
ch1-penguins/: Cargo.toml
ch1-penguins/src/: main.rs
ch1-race/: Cargo.toml
ch1-race/src/: main.rs
