[workspace]
members = [
    "ch1-cerelas",
    "ch1-penguins",
    "ch1-race"
]

resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[workspace.package]
authors = ["JoonHo Son <joonho.son@me.com>"]
edition = "2021"
version = "0.1.0"
